Adding tweet views

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/home/rapixar/.local/share/virtualenvs/django-social-WIdLF66Y/bin/python"
+    "python.pythonPath": "/home/rapixar/.local/share/virtualenvs/django-social-WIdLF66Y/bin/python",
+    "python.formatting.provider": "autopep8"
 }
